# warehouse-management-system

./: README.md
code/GUI-version/code/: Warehouse.pro  database.cpp  database.h  good.cpp  good.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  warehouse.cpp  warehouse.h
code/command-line-version/: .clang-format  CMakeLists.txt  main.cpp  readme.md  warehouse.cpp  warehouse.h  warehouseMgrSysConfig.h.in
